# whisper-terminal-asr

./: .gitignore  README.md  main.py  pyproject.toml  requirements.in  requirements.txt  setup.py  test_lightning_mlx.py  test_nan_fix.py
src/whisper_term_asr/: __init__.py  __main__.py  cli.py
src/whisper_term_asr/audio/: recorder.py
src/whisper_term_asr/models/: base.py  factory.py  whisper_faster.py  whisper_insanely_fast.py  whisper_lightning_mlx.py  whisper_mlx.py  whisper_openai.py
src/whisper_term_asr/utils/: benchmark.py
tests/: test_lightning_mlx.py
